refactor N2oUrlFilter